--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ npm-debug.log
 yarn-error.log
 package-lock.json
 pnpm-lock.yaml
+/node_modules
+/.pnp
+.pnp.js
 
 
 # Build output
@@ -35,4 +38,20 @@ Thumbs.db
 # Misc
 coverage/
 tmp/
-*.tsbuildinfo   
+*.tsbuildinfo  
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log* 
+
+# testing
+/coverage
+
+# production
+/build
+
